2009-09-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Regex.java (parseSubSpec):
	Rewrite parseSubSpec to simplify and properly
	support Tcl escape chars and to escape Java
	regexp characters.
	* tests/tcl/regexp.test: Add simplified escape
	processing tests for regsub.

2009-09-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Regex.java (replaceFirst, parseSubSpec):
	Fixup comments, make logic more readable.
	Remove code block that replaced \ with \\ in replaceFirst.
	* src/jacl/tcl/lang/RegsubCmd.java (cmdProc):
	Add comments, rewrite block logic.
	* tests/tcl/regexp.test: Added simple regsub tests.

2009-09-19  Mo DeJong  <mdejong@users.sourceforge.net>

	Checkin reworked Java regexp module.

	* Makefile.in: Remove build rules for sunlabs classes.
	* src/jacl/sunlabs/brazil/util/regexp/Regexp.java: Removed
	* src/jacl/sunlabs/brazil/util/regexp/Regsub.java: Removed
	* src/jacl/tcl/lang/Regex.java: Add regexp module that
	makes use of Java native regexp classes.
	* src/jacl/tcl/lang/RegexpCmd.java:
	* src/jacl/tcl/lang/RegsubCmd.java:
	* src/jacl/tcl/lang/TclRegexp.java:
	* src/jacl/tcl/lang/Util.java: Use new regexp module.
	* tests/tcl/RegexpCmd.test: Removed
	* tests/tcl/regexp.test: Update to Tcl 8.4 test cases.

2009-09-16  Mo DeJong  <mdejong@users.sourceforge.net>

	tcljava-15-reformatting-checkpoint-2009-09-16
	to mark state of the HEAD before reverting recent
	changes back to tcljava-14-branchpoint.

2009-05-26  Mo DeJong  <mdejong@users.sourceforge.net>

	Created CVS branch named tcljava-14-branch
	and tcljava-14-branchpoint for all future
	1.4.X releases.

2008-12-13  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen.
        * tcljava.m4 (AC_GCC_BUGS): Check to see if passing
        -O2 -fno-strict-aliasing to gcc 4.X fixes a crash caused by
        incorrect code generation in the optimizer. This was causing
        a problem with storing a Tcl_Interp* in a jlong.